styled form pages, fixed alignment issues, styled show pages

--- a/app/assets/stylesheets/investor.scss
+++ b/app/assets/stylesheets/investor.scss
@@ -17,19 +17,6 @@
   padding: 20px;
 }
 
-.create-new-investor {
-  background-color: transparent !important;
-	color: #5b04ff !important;
-  border: 2px solid #5b04ff !important;
-  text-align: left;
-  text-decoration: none !important;
-  display: inline-block !important;
-	font-size: 1.2em !important;
-	padding: 10px 20px !important;
-	letter-spacing: 1px !important;
-	margin: 8px !important;
-  border-radius: 20px !important;
-}
 
 .field {
   background-color: transparent !important;
@@ -52,7 +39,6 @@ color: #5b04ff;
 b, strong {
   font-family: 'Roboto', sans-serif !important;
   font-size: 1.5em;
-  font-weight: 300;
 }
 
 // p {
