--- a/app/assets/stylesheets/startup.scss
+++ b/app/assets/stylesheets/startup.scss
@@ -18,7 +18,7 @@ table {
 h1 {
   text-align: center;
   margin-bottom: 10%;
-  font-size: 4rem;
+  font-size: 3em;
   color: #5b04ff;
 }
 
@@ -63,7 +63,5 @@ th {
 
 #notice {
   font-family: 'Roboto', sans-serif !important;
-  font-size: 4em;
+  font-size: 2em;
 }
-
-// #33334d
